@@ -1,5 +1,10 @@
 2005-08-16  James Henstridge  <james@jamesh.id.au>
 
+	* jhbuild/frontends/tinderbox.py (get_distro): split out code for
+	guessing distro details into a separate function. Enhance to use
+	"lsb_release" tool to look up distro details, if available.  Fixes
+	bug #313478.
+
 	* modulesets/gnome-2.12.modules (libbtctl, gnome-bluetooth, phonemgr):
 	add modules.  Patch from Jaap A. Haitsma, fixing bug #310674.
 
